Adding script for training with data-parallelism

--- a/notebooks/plot_metrics.ipynb
+++ b/notebooks/plot_metrics.ipynb
@@ -64,7 +64,7 @@
     "train_loss = train_loss[1:]\n",
     "valid_loss = valid_loss[1:]\n",
     "\n",
-    "#plt.plot([i+1 for i, _ in enumerate(train_loss)], train_loss)\n",
+    "plt.plot([i+1 for i, _ in enumerate(train_loss)], train_loss)\n",
     "plt.plot([i+1 for i, _ in enumerate(valid_loss)], valid_loss)\n",
     "plt.show()"
    ]
