--- a/notebooks/test_model.ipynb
+++ b/notebooks/test_model.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "from omegaconf import OmegaConf\n",
     "from ase.io import read\n",
-    "from model.visnet import create_model\n",
+    "from ViSNetGW.model.visnet import create_model\n",
     "from tqdm import tqdm\n",
     "from rdkit import Chem\n",
     "from rdkit.Chem import rdDetermineBonds"
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#logs = \"first_try_lmax_1\"\n",
+    "#logs = \"../finetune_5M_30_epochs_logs\"\n",
     "logs = \"../visnet_logs\"\n",
     "\n",
     "model_file = f\"{logs}/model.ckpt\"\n",
@@ -114,7 +114,14 @@
     "print(f\"Mean = {np.mean(all_mae):.4f} +-({np.std(all_mae):.4f}) eV\")\n",
     "print(f\"Median = {np.median(all_mae):.4f} eV\")\n",
     "print(f\"Min. MAE = {min_mae:.4f} eV for {min_mol}\")\n",
-    "print(f\"Max. MAE = {max_mae:.4f} eV for {max_mol}\")"
+    "print(f\"Max. MAE = {max_mae:.4f} eV for {max_mol}\")\n",
+    "\n",
+    "'''\n",
+    "Mean = 0.0638 +-(0.0765) eV\n",
+    "Median = 0.0417 eV\n",
+    "Min. MAE = 0.0007 eV for mol_82472\n",
+    "Max. MAE = 0.5020 eV for mol_83989\n",
+    "'''"
    ]
   },
   {
@@ -123,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.hist(column=\"mae\", bins=100)"
+    "df.hist(column=\"mae\", bins=35)"
    ]
   },
   {
@@ -168,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mol = \"DHComplex_guest\""
+    "mol = \"SH3_guest\""
    ]
   },
   {
