--- a/notebooks/plot_metrics.ipynb
+++ b/notebooks/plot_metrics.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "#metrics_file = \"second_try_lmax_2/metrics.csv\"\n",
-    "metrics_file = \"../visnet_logs/metrics.csv\""
+    "metrics_file = \"/Users/dario/trained_models/visnet/pretrain_1M_logs/metrics.csv\""
    ]
   },
   {
