--- a/notebooks/plot_metrics.ipynb
+++ b/notebooks/plot_metrics.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#metrics_file = \"second_try_lmax_2/metrics.csv\"\n",
-    "metrics_file = \"/Users/dario/trained_models/visnet/pretrain_1M_logs/metrics.csv\""
+    "metrics_file = \"../visnet_logs/metrics.csv\"\n",
+    "#metrics_file = \"/Users/dario/trained_models/visnet/pretrain_1M_logs/metrics.csv\""
    ]
   },
   {
