--- a/notebooks/plot_metrics.ipynb
+++ b/notebooks/plot_metrics.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "metrics_file = \"../visnet_logs/metrics.csv\"\n",
-    "#metrics_file = \"/Users/dario/trained_models/visnet/pretrain_1M_logs/metrics.csv\""
+    "#metrics_file = \"/Users/dario/trained_models/visnet/pretrain_5M_logs/metrics.csv\""
    ]
   },
   {
@@ -64,7 +64,7 @@
     "train_loss = train_loss[1:]\n",
     "valid_loss = valid_loss[1:]\n",
     "\n",
-    "plt.plot([i+1 for i, _ in enumerate(train_loss)], train_loss)\n",
+    "#plt.plot([i+1 for i, _ in enumerate(train_loss)], train_loss)\n",
     "plt.plot([i+1 for i, _ in enumerate(valid_loss)], valid_loss)\n",
     "plt.show()"
    ]
