Adding option script loss curves of multiple training runs at once

--- a/notebooks/plot_metrics.ipynb
+++ b/notebooks/plot_metrics.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -45,7 +47,7 @@
     "\n",
     "df_train = df_train.groupby([\"epoch\"]).mean()\n",
     "df_valid = df_valid.groupby([\"epoch\"]).mean()\n",
-    "df_lr = df_lr.groupby([\"epoch\"]).mean()\n",
+    "#df_lr = df_lr.groupby([\"epoch\"]).mean()\n",
     "\n",
     "#print(df_train)\n",
     "print(df_valid)\n",
@@ -66,6 +68,67 @@
     "\n",
     "plt.plot([i+1 for i, _ in enumerate(train_loss)], train_loss)\n",
     "plt.plot([i+1 for i, _ in enumerate(valid_loss)], valid_loss)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_files = [\n",
+    "    \"../visnet_logs_1M/metrics.csv\",\n",
+    "    \"../visnet_logs_5M/metrics.csv\",\n",
+    "    \"../visnet_logs_1M_transfer/metrics.csv\",\n",
+    "    \"../visnet_logs_5M_transfer/metrics.csv\",\n",
+    "]\n",
+    "\n",
+    "for metrics_file in metrics_files:\n",
+    "    label_prefix = os.path.basename(os.path.dirname(metrics_file))\n",
+    "\n",
+    "    df = pd.read_csv(metrics_file)\n",
+    "\n",
+    "    df_train = df[[\"epoch\", col_train]].dropna()\n",
+    "    df_valid = df[[\"epoch\", col_valid]].dropna()\n",
+    "\n",
+    "    df_train = df_train.groupby(\"epoch\").mean()\n",
+    "    df_valid = df_valid.groupby(\"epoch\").mean()\n",
+    "\n",
+    "    train_loss = df_train[col_train].tolist()[1:]\n",
+    "    valid_loss = df_valid[col_valid].tolist()[1:]\n",
+    "\n",
+    "    epochs = [i + 1 for i in range(len(train_loss))]\n",
+    "\n",
+    "    #plt.plot(epochs, train_loss, label=f\"{label_prefix} - Train\")\n",
+    "    plt.plot(epochs, valid_loss, label=f\"{label_prefix} - Valid\")\n",
+    "\n",
+    "plt.xlabel(\"Epoch\")\n",
+    "plt.ylabel(\"Loss (MAE)\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_lr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = df_lr[col_lr].to_list()\n",
+    "\n",
+    "plt.plot([i+1 for i, _ in enumerate(lr)], lr)\n",
     "plt.show()"
    ]
   },
