Adding script for training with SGD with momentum

--- a/notebooks/plot_metrics.ipynb
+++ b/notebooks/plot_metrics.ipynb
@@ -78,10 +78,8 @@
    "outputs": [],
    "source": [
     "metrics_files = [\n",
-    "    \"../visnet_logs_1M/metrics.csv\",\n",
-    "    \"../visnet_logs_5M/metrics.csv\",\n",
-    "    \"../visnet_logs_1M_transfer/metrics.csv\",\n",
-    "    \"../visnet_logs_5M_transfer/metrics.csv\",\n",
+    "    \"../visnet_logs/metrics.csv\",\n",
+    "    \"../visnet_logs_lower_lr/metrics.csv\",\n",
     "]\n",
     "\n",
     "for metrics_file in metrics_files:\n",
