--- a/notebooks/test_model.ipynb
+++ b/notebooks/test_model.ipynb
@@ -38,7 +38,7 @@
     "#logs = \"../finetune_5M_30_epochs_logs\"\n",
     "logs = \"../visnet_logs\"\n",
     "\n",
-    "model_file = f\"{logs}/model.ckpt\"\n",
+    "model_file = f\"{logs}/best_model.ckpt\"\n",
     "config_file = f\"{logs}/config.yaml\""
    ]
   },
@@ -114,14 +114,7 @@
     "print(f\"Mean = {np.mean(all_mae):.4f} +-({np.std(all_mae):.4f}) eV\")\n",
     "print(f\"Median = {np.median(all_mae):.4f} eV\")\n",
     "print(f\"Min. MAE = {min_mae:.4f} eV for {min_mol}\")\n",
-    "print(f\"Max. MAE = {max_mae:.4f} eV for {max_mol}\")\n",
-    "\n",
-    "'''\n",
-    "Mean = 0.0638 +-(0.0765) eV\n",
-    "Median = 0.0417 eV\n",
-    "Min. MAE = 0.0007 eV for mol_82472\n",
-    "Max. MAE = 0.5020 eV for mol_83989\n",
-    "'''"
+    "print(f\"Max. MAE = {max_mae:.4f} eV for {max_mol}\")"
    ]
   },
   {
