Adding option to choose target property

--- a/notebooks/plot_metrics.ipynb
+++ b/notebooks/plot_metrics.ipynb
@@ -18,8 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics_file = \"../visnet_logs/metrics.csv\"\n",
-    "#metrics_file = \"/Volumes/LaCie/trained_models/ViSNet/try_high_lr_and_schedule/prehomo1M128502532/metrics.csv\""
+    "col_train = \"train_mae\"\n",
+    "col_valid = \"val_mae\"\n",
+    "col_lr = \"lr\""
    ]
   },
   {
@@ -28,9 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col_train = \"train_mae\"\n",
-    "col_valid = \"val_mae\"\n",
-    "col_lr = \"lr\""
+    "metrics_file = \"../visnet_logs_0/metrics.csv\"\n",
+    "#metrics_file = \"/Volumes/LaCie/trained_models/ViSNet/try_high_lr_and_schedule/prehomo1M128502532/metrics.csv\""
    ]
   },
   {
@@ -63,8 +63,8 @@
     "train_loss = df_train[col_train].to_list()\n",
     "valid_loss = df_valid[col_valid].to_list()\n",
     "\n",
-    "train_loss = train_loss[1:]\n",
-    "valid_loss = valid_loss[1:]\n",
+    "train_loss = train_loss[2:]\n",
+    "valid_loss = valid_loss[2:]\n",
     "\n",
     "plt.plot([i+1 for i, _ in enumerate(train_loss)], train_loss)\n",
     "plt.plot([i+1 for i, _ in enumerate(valid_loss)], valid_loss)\n",
@@ -78,8 +78,8 @@
    "outputs": [],
    "source": [
     "metrics_files = [\n",
-    "    \"../visnet_logs/metrics.csv\",\n",
-    "    \"../visnet_logs_lower_lr/metrics.csv\",\n",
+    "    \"../visnet_logs_1/metrics.csv\",\n",
+    "    \"../visnet_logs_2/metrics.csv\",\n",
     "]\n",
     "\n",
     "for metrics_file in metrics_files:\n",
