Adding script for profiling training bottlenecks

--- a/notebooks/plot_metrics.ipynb
+++ b/notebooks/plot_metrics.ipynb
@@ -78,8 +78,8 @@
    "outputs": [],
    "source": [
     "metrics_files = [\n",
-    "    \"../visnet_logs_1/metrics.csv\",\n",
-    "    \"../visnet_logs_2/metrics.csv\",\n",
+    "    \"../visnet_logs_0/metrics.csv\",\n",
+    "    \"../visnet_logs/metrics.csv\",\n",
     "]\n",
     "\n",
     "for metrics_file in metrics_files:\n",
