--- a/notebooks/test_model.ipynb
+++ b/notebooks/test_model.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "#logs = \"../finetune_5M_30_epochs_logs\"\n",
-    "logs = \"../visnet_logs_2\"\n",
+    "logs = \"../visnet_logs\"\n",
     "\n",
     "#model_file = f\"{logs}/best_model.ckpt\"\n",
     "model_file = f\"{logs}/best_model.ckpt\"\n",
@@ -118,15 +118,10 @@
     "print(f\"Max. MAE = {max_mae:.4f} eV for {max_mol}\")\n",
     "\n",
     "'''\n",
-    "Mean = 0.2862 +-(0.1910) eV\n",
-    "Median = 0.2542 eV\n",
-    "Min. MAE = 0.0034 eV for mol_5933\n",
-    "Max. MAE = 1.0251 eV for mol_41386\n",
-    "\n",
-    "Mean = 0.2718 +-(0.1688) eV\n",
-    "Median = 0.2425 eV\n",
-    "Min. MAE = 0.0036 eV for mol_79515\n",
-    "Max. MAE = 0.8551 eV for mol_65277\n",
+    "Mean = 0.2238 +-(0.2432) eV\n",
+    "Median = 0.1509 eV\n",
+    "Min. MAE = 0.0014 eV for mol_49795\n",
+    "Max. MAE = 1.4287 eV for mol_83989\n",
     "'''"
    ]
   },
