Adding option to load LUMO energies

--- a/notebooks/test_model.ipynb
+++ b/notebooks/test_model.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#logs = \"../finetune_5M_30_epochs_logs\"\n",
+    "#logs = \"/Volumes/LaCie/trained_models/ViSNet/homo0M128502532\"\n",
     "logs = \"../visnet_logs\"\n",
     "\n",
     "#model_file = f\"{logs}/best_model.ckpt\"\n",
@@ -118,10 +118,10 @@
     "print(f\"Max. MAE = {max_mae:.4f} eV for {max_mol}\")\n",
     "\n",
     "'''\n",
-    "Mean = 0.2238 +-(0.2432) eV\n",
-    "Median = 0.1509 eV\n",
-    "Min. MAE = 0.0014 eV for mol_49795\n",
-    "Max. MAE = 1.4287 eV for mol_83989\n",
+    "Mean = 0.0462 +-(0.0464) eV\n",
+    "Median = 0.0322 eV\n",
+    "Min. MAE = 0.0004 eV for mol_88474\n",
+    "Max. MAE = 0.2280 eV for mol_40976\n",
     "'''"
    ]
   },
