--- a/notebooks/plot_metrics.ipynb
+++ b/notebooks/plot_metrics.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics_file = \"../visnet_logs_0/metrics.csv\"\n",
+    "metrics_file = \"../visnet_logs/metrics.csv\"\n",
     "#metrics_file = \"/Volumes/LaCie/trained_models/ViSNet/try_high_lr_and_schedule/prehomo1M128502532/metrics.csv\""
    ]
   },
@@ -63,8 +63,8 @@
     "train_loss = df_train[col_train].to_list()\n",
     "valid_loss = df_valid[col_valid].to_list()\n",
     "\n",
-    "train_loss = train_loss[2:]\n",
-    "valid_loss = valid_loss[2:]\n",
+    "train_loss = train_loss[1:]\n",
+    "valid_loss = valid_loss[1:]\n",
     "\n",
     "plt.plot([i+1 for i, _ in enumerate(train_loss)], train_loss)\n",
     "plt.plot([i+1 for i, _ in enumerate(valid_loss)], valid_loss)\n",
