Saving SWA model

--- a/notebooks/test_model.ipynb
+++ b/notebooks/test_model.ipynb
@@ -69,6 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "target = \"homo\"\n",
     "pc9_path = \"../test_datasets/PC9\"\n",
     "\n",
     "xyz_files = os.listdir(f\"{pc9_path}/mols\")\n",
@@ -88,7 +89,12 @@
     "        atoms = read(f\"{pc9_path}/mols/{xyz_file}\", format=\"xyz\")\n",
     "        homo_idx = int(np.sum(atoms.get_atomic_numbers()) // 2 - 1)\n",
     "        eqp = np.loadtxt(f\"{pc9_path}/E_qp/{mol}.dat\")\n",
-    "        y = float(eqp[homo_idx])\n",
+    "        if target == \"homo\":\n",
+    "            y = float(eqp[homo_idx])\n",
+    "        elif target == \"lumo\":\n",
+    "            y = float(eqp[homo_idx+1])\n",
+    "        elif target == \"gap\":\n",
+    "            y = float(eqp[homo_idx+1]) - float(eqp[homo_idx])\n",
     "        Z = torch.from_numpy(atoms.get_atomic_numbers())\n",
     "        R = torch.from_numpy(atoms.get_positions()).to(dtype=torch.float32)\n",
     "        B = torch.zeros((len(atoms),)).to(dtype=torch.int64)\n",
@@ -115,14 +121,7 @@
     "print(f\"Mean = {np.mean(all_mae):.4f} +-({np.std(all_mae):.4f}) eV\")\n",
     "print(f\"Median = {np.median(all_mae):.4f} eV\")\n",
     "print(f\"Min. MAE = {min_mae:.4f} eV for {min_mol}\")\n",
-    "print(f\"Max. MAE = {max_mae:.4f} eV for {max_mol}\")\n",
-    "\n",
-    "'''\n",
-    "Mean = 0.0462 +-(0.0464) eV\n",
-    "Median = 0.0322 eV\n",
-    "Min. MAE = 0.0004 eV for mol_88474\n",
-    "Max. MAE = 0.2280 eV for mol_40976\n",
-    "'''"
+    "print(f\"Max. MAE = {max_mae:.4f} eV for {max_mol}\")"
    ]
   },
   {
