Adding option to apply transfer learning from DFT to GW on GWSet

--- a/notebooks/test_model.ipynb
+++ b/notebooks/test_model.ipynb
@@ -35,11 +35,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#logs = \"/Volumes/LaCie/trained_models/ViSNet/homo0M128502532\"\n",
-    "logs = \"../visnet_logs\"\n",
+    "logs = \"/Volumes/LaCie/trained_models/ViSNet/lumo1M128502532_transfer\"\n",
+    "#logs = \"../visnet_logs\"\n",
     "\n",
-    "#model_file = f\"{logs}/best_model.ckpt\"\n",
     "model_file = f\"{logs}/best_model.ckpt\"\n",
+    "#model_file = f\"{logs}/model_40_epochs.ckpt\"\n",
     "config_file = f\"{logs}/config.yaml\""
    ]
   },
@@ -64,12 +64,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### HOMO / LUMO"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = \"homo\"\n",
+    "target = \"lumo\"\n",
     "pc9_path = \"../test_datasets/PC9\"\n",
     "\n",
     "xyz_files = os.listdir(f\"{pc9_path}/mols\")\n",
@@ -93,14 +100,94 @@
     "            y = float(eqp[homo_idx])\n",
     "        elif target == \"lumo\":\n",
     "            y = float(eqp[homo_idx+1])\n",
-    "        elif target == \"gap\":\n",
-    "            y = float(eqp[homo_idx+1]) - float(eqp[homo_idx])\n",
     "        Z = torch.from_numpy(atoms.get_atomic_numbers())\n",
     "        R = torch.from_numpy(atoms.get_positions()).to(dtype=torch.float32)\n",
     "        B = torch.zeros((len(atoms),)).to(dtype=torch.int64)\n",
     "        data = {\"z\": Z, \"pos\": R, \"batch\": B}\n",
     "        y_pred, _ = model(data)\n",
     "        y_pred = y_pred.item()\n",
+    "        mae = abs(y_pred - y)\n",
+    "        all_mae.append(mae)\n",
+    "        all_mols.append(mol)\n",
+    "        if mae < min_mae:\n",
+    "            min_mae = mae\n",
+    "            min_mol = mol\n",
+    "        if mae > max_mae:\n",
+    "            max_mae = mae\n",
+    "            max_mol = mol\n",
+    "\n",
+    "data = {\n",
+    "    \"mol\": all_mols,\n",
+    "    \"mae\": all_mae,\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print(f\"Mean = {np.mean(all_mae):.4f} +-({np.std(all_mae):.4f}) eV\")\n",
+    "print(f\"Median = {np.median(all_mae):.4f} eV\")\n",
+    "print(f\"Min. MAE = {min_mae:.4f} eV for {min_mol}\")\n",
+    "print(f\"Max. MAE = {max_mae:.4f} eV for {max_mol}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GAP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pc9_path = \"../test_datasets/PC9\"\n",
+    "logs_homo = \"../visnet_logs_homo\"\n",
+    "logs_lumo = \"../visnet_logs_lumo\"\n",
+    "\n",
+    "model_file_homo = f\"{logs_homo}/best_model.ckpt\"\n",
+    "config_file_homo = f\"{logs_homo}/config.yaml\"\n",
+    "model_file_lumo = f\"{logs_lumo}/best_model.ckpt\"\n",
+    "config_file_lumo = f\"{logs_lumo}/config.yaml\"\n",
+    "\n",
+    "cfg = OmegaConf.load(os.path.join(config_file_homo))\n",
+    "model_homo = create_model(cfg)\n",
+    "state_dict = torch.load(model_file_homo, map_location=torch.device(\"cpu\"))\n",
+    "model_homo.load_state_dict(state_dict)\n",
+    "model_homo.eval()\n",
+    "cfg = OmegaConf.load(os.path.join(config_file_lumo))\n",
+    "model_lumo = create_model(cfg)\n",
+    "state_dict = torch.load(model_file_lumo, map_location=torch.device(\"cpu\"))\n",
+    "model_lumo.load_state_dict(state_dict)\n",
+    "model_lumo.eval()\n",
+    "\n",
+    "xyz_files = os.listdir(f\"{pc9_path}/mols\")\n",
+    "all_mols = []\n",
+    "all_mae = []\n",
+    "min_mae = 1000000\n",
+    "max_mae = 0\n",
+    "with torch.no_grad():\n",
+    "    for xyz_file in xyz_files:\n",
+    "        raw_mol = Chem.MolFromXYZFile(f\"{pc9_path}/mols/{xyz_file}\")\n",
+    "        mol = Chem.Mol(raw_mol)\n",
+    "        rdDetermineBonds.DetermineBonds(mol)\n",
+    "        for atom in mol.GetAtoms():\n",
+    "            if atom.GetFormalCharge() != 0:\n",
+    "                continue\n",
+    "        mol = xyz_file[:-4]\n",
+    "        atoms = read(f\"{pc9_path}/mols/{xyz_file}\", format=\"xyz\")\n",
+    "        homo_idx = int(np.sum(atoms.get_atomic_numbers()) // 2 - 1)\n",
+    "        eqp = np.loadtxt(f\"{pc9_path}/E_qp/{mol}.dat\")\n",
+    "        y = float(eqp[homo_idx+1]) - float(eqp[homo_idx])\n",
+    "        Z = torch.from_numpy(atoms.get_atomic_numbers())\n",
+    "        R = torch.from_numpy(atoms.get_positions()).to(dtype=torch.float32)\n",
+    "        B = torch.zeros((len(atoms),)).to(dtype=torch.int64)\n",
+    "        data = {\"z\": Z, \"pos\": R, \"batch\": B}\n",
+    "        y_pred_homo, _ = model_homo(data)\n",
+    "        y_pred_lumo, _ = model_lumo(data)\n",
+    "        y_pred = y_pred_lumo.item() - y_pred_homo.item()\n",
+    "        print(f\"{y_pred:.4f} {y:.4f}\")\n",
     "        mae = abs(y_pred - y)\n",
     "        all_mae.append(mae)\n",
     "        all_mols.append(mol)\n",
