Adding option to pre-train on OMol25 total energies

--- a/notebooks/test_model.ipynb
+++ b/notebooks/test_model.ipynb
@@ -35,11 +35,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs = \"/Volumes/LaCie/trained_models/ViSNet/lumo1M128502532_transfer\"\n",
+    "logs = \"/Volumes/LaCie/trained_models/ViSNet/homo10M128502532_transfer\"\n",
     "#logs = \"../visnet_logs\"\n",
     "\n",
-    "model_file = f\"{logs}/best_model.ckpt\"\n",
-    "#model_file = f\"{logs}/model_40_epochs.ckpt\"\n",
+    "#model_file = f\"{logs}/best_model.ckpt\"\n",
+    "model_file = f\"{logs}/model_100_epochs.ckpt\"\n",
     "config_file = f\"{logs}/config.yaml\""
    ]
   },
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = \"lumo\"\n",
+    "target = \"homo\"\n",
     "pc9_path = \"../test_datasets/PC9\"\n",
     "\n",
     "xyz_files = os.listdir(f\"{pc9_path}/mols\")\n",
