Flexible loading of standard and SWA models

--- a/notebooks/plot_metrics.ipynb
+++ b/notebooks/plot_metrics.ipynb
@@ -78,8 +78,8 @@
    "outputs": [],
    "source": [
     "metrics_files = [\n",
-    "    \"../visnet_logs_0/metrics.csv\",\n",
-    "    \"../visnet_logs/metrics.csv\",\n",
+    "    \"../visnet_logs_1/metrics.csv\",\n",
+    "    \"../visnet_logs_2/metrics.csv\",\n",
     "]\n",
     "\n",
     "for metrics_file in metrics_files:\n",
@@ -98,7 +98,7 @@
     "\n",
     "    epochs = [i + 1 for i in range(len(train_loss))]\n",
     "\n",
-    "    #plt.plot(epochs, train_loss, label=f\"{label_prefix} - Train\")\n",
+    "    plt.plot(epochs, train_loss, label=f\"{label_prefix} - Train\")\n",
     "    plt.plot(epochs, valid_loss, label=f\"{label_prefix} - Valid\")\n",
     "\n",
     "plt.xlabel(\"Epoch\")\n",
