--- a/notebooks/test_model.ipynb
+++ b/notebooks/test_model.ipynb
@@ -35,11 +35,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#logs = \"/Volumes/LaCie/trained_models/ViSNet/homo1M128502532\"\n",
+    "#logs = \"/Volumes/LaCie/trained_models/ViSNet/homo10M128502532_transfer\"\n",
     "logs = \"../visnet_logs\"\n",
     "\n",
     "model_file = f\"{logs}/best_model.ckpt\"\n",
-    "#model_file = f\"{logs}/model_40_epochs.ckpt\"\n",
+    "#model_file = f\"{logs}/model_20_epochs.ckpt\"\n",
     "config_file = f\"{logs}/config.yaml\""
    ]
   },
@@ -52,7 +52,11 @@
     "cfg = OmegaConf.load(os.path.join(config_file))\n",
     "model = create_model(cfg)\n",
     "state_dict = torch.load(model_file, map_location=torch.device(\"cpu\"))\n",
-    "model.load_state_dict(state_dict)\n",
+    "if \"swa\" in model_file:\n",
+    "    new_state_dict = {key[7:]: value for key, value in state_dict.items() if \"module\" in key}\n",
+    "    model.load_state_dict(new_state_dict)\n",
+    "else:\n",
+    "    model.load_state_dict(state_dict)\n",
     "model.eval()"
    ]
   },
@@ -174,8 +178,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reines finetuning\n",
     "df.nlargest(n=5, columns=\"mae_gw\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df[\"mol\"] == \"mol_42781\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df[\"mol\"] == \"mol_43906\"]"
    ]
   },
   {
@@ -355,7 +376,7 @@
     "        atoms = read(f\"{pc9_path}/mols/{xyz_file}\", format=\"xyz\")\n",
     "        homo_idx = int(np.sum(atoms.get_atomic_numbers()) // 2 - 1)\n",
     "        e_qp = np.loadtxt(f\"{pc9_path}/E_qp/{mol}.dat\")\n",
-    "        e_dft = np.loadtxt(f\"{pc9_path}/E_dft/{mol}.dat\")\n",
+    "        e_dft = np.loadtxt(f\"{pc9_path}/E_dft/{mol}.dat\") * HARTREE_TO_EV\n",
     "        if target == \"homo\":\n",
     "            y_gw = float(e_qp[homo_idx])\n",
     "            y_dft = float(e_dft[homo_idx])\n",
@@ -370,7 +391,6 @@
     "        data = {\"z\": Z, \"pos\": R, \"batch\": B}\n",
     "        y_pred, _ = model(data)\n",
     "        y_pred = y_pred.item()\n",
-    "        print(y_pred, y_dft, y)\n",
     "        mae_gw = abs(y_pred + y_dft - y)\n",
     "        mae_dft = abs(y_pred - y_dft)\n",
     "        all_y_pred.append(y_pred)\n",
@@ -433,7 +453,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mol = \"SH3_guest\""
+    "mol = \"DHComplex_guest\""
    ]
   },
   {
