Refactoring data preparation, adding script for straightforward finetuning

--- a/notebooks/test_model.ipynb
+++ b/notebooks/test_model.ipynb
@@ -35,8 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs = \"/Volumes/LaCie/trained_models/ViSNet/homo0M128502532\"\n",
-    "#logs = \"../visnet_logs\"\n",
+    "#logs = \"/Volumes/LaCie/trained_models/ViSNet/homo0M128502532\"\n",
+    "logs = \"../visnet_logs\"\n",
     "\n",
     "model_file = f\"{logs}/best_model.ckpt\"\n",
     "#model_file = f\"{logs}/model_20_epochs.ckpt\"\n",
@@ -169,7 +169,24 @@
     "print(f\"Mean = {np.mean(all_mae_dft):.4f} +-({np.std(all_mae_dft):.4f}) eV\")\n",
     "print(f\"Median = {np.median(all_mae_dft):.4f} eV\")\n",
     "print(f\"Min. MAE = {min_mae_dft:.4f} eV for {min_mol_dft}\")\n",
-    "print(f\"Max. MAE = {max_mae_dft:.4f} eV for {max_mol_dft}\")"
+    "print(f\"Max. MAE = {max_mae_dft:.4f} eV for {max_mol_dft}\")\n",
+    "\n",
+    "'''\n",
+    "Mean = 0.2178 +-(0.2291) eV\n",
+    "Median = 0.1465 eV\n",
+    "Min. MAE = 0.0006 eV for mol_82472\n",
+    "Max. MAE = 1.3302 eV for mol_83989\n",
+    "\n",
+    "Mean = 0.2053 +-(0.2346) eV\n",
+    "Median = 0.1239 eV\n",
+    "Min. MAE = 0.0021 eV for mol_12718\n",
+    "Max. MAE = 1.4624 eV for mol_43906\n",
+    "\n",
+    "Mean = 0.2004 +-(0.2368) eV\n",
+    "Median = 0.1188 eV\n",
+    "Min. MAE = 0.0033 eV for mol_38197\n",
+    "Max. MAE = 1.5849 eV for mol_43906\n",
+    "'''"
    ]
   },
   {
