Adding scripts for plotting results

--- a/notebooks/plot_metrics.ipynb
+++ b/notebooks/plot_metrics.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "#metrics_file = \"../visnet_logs/metrics.csv\"\n",
-    "metrics_file = \"/Volumes/LaCie/trained_models/ViSNet/lumo0M128502532/metrics.csv\""
+    "metrics_file = \"/Volumes/LaCie/trained_models/ViSNet/pretraining_finetuning_alignment/homolumo5M128502532_transfer_converged/visnet_logs/metrics.csv\""
    ]
   },
   {
@@ -50,7 +50,7 @@
     "#df_lr = df_lr.groupby([\"epoch\"]).mean()\n",
     "\n",
     "#print(df_train)\n",
-    "print(df_valid[-30:])\n",
+    "print(df_valid[20:])\n",
     "#print(df_lr)"
    ]
   },
@@ -72,7 +72,7 @@
     "df_val = df[\"val_mae\"]\n",
     "df_val_window = df_val.shift(1).rolling(10).max()\n",
     "df_eval = (df_val_window - df_val) < 0.01\n",
-    "print(df_eval)"
+    "print(df_eval[20:])"
    ]
   },
   {
