--- a/notebooks/test_model.ipynb
+++ b/notebooks/test_model.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "\n",
     "\n",
-    "def test_model(model, test_set, folder, target):\n",
+    "def test_model(model, test_set, folder, target, limit_mol_size=False):\n",
     "\n",
     "    xyz_path = os.path.join(\"/Volumes/LaCie/test_sets\", test_set, \"mols\")\n",
     "    data_path = os.path.join(\"/Volumes/LaCie/test_sets\", test_set, folder)\n",
@@ -61,8 +61,9 @@
     "        for xyz_file in tqdm(xyz_files, leave=False):\n",
     "            mol = xyz_file[:-4]\n",
     "            atoms = read(os.path.join(xyz_path, xyz_file), format=\"xyz\")\n",
-    "            if not (12 <= len(atoms) <= 24):\n",
-    "                continue\n",
+    "            if limit_mol_size:\n",
+    "                if not (12 <= len(atoms) <= 24):\n",
+    "                    continue\n",
     "            #for elem in atoms.get_chemical_symbols():\n",
     "            #    if elem not in [\"H\", \"C\", \"N\", \"O\", \"F\"]:\n",
     "            #        print(elem)\n",
@@ -89,11 +90,11 @@
     "\n",
     "\n",
     "\n",
-    "def test_model_delta(model, target, base_path):\n",
+    "def test_model_delta(model, test_set, target):\n",
     "\n",
-    "    xyz_path = os.path.join(base_path, \"mols\")\n",
-    "    gw_path = os.path.join(base_path, \"E_qp\")\n",
-    "    dft_path = os.path.join(base_path, \"E_dft\")\n",
+    "    xyz_path = os.path.join(\"/Volumes/LaCie/test_sets\", test_set, \"mols\")\n",
+    "    gw_path = os.path.join(\"/Volumes/LaCie/test_sets\", test_set, \"E_qp\")\n",
+    "    dft_path = os.path.join(\"/Volumes/LaCie/test_sets\", test_set, \"E_qp\")\n",
     "\n",
     "    xyz_files = os.listdir(xyz_path)\n",
     "    all_mae = []\n",
@@ -162,13 +163,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs_path = \"../visnet_logs\"\n",
-    "#logs_path = \"/Volumes/LaCie/trained_models/ViSNet/prehomo10M216502532\"\n",
+    "#logs_path = \"../visnet_logs\"\n",
+    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/pretraining_finetuning_alignment/homogap5M128502532_transfer_converged/visnet_logs\"\n",
     "#ckpt_name = \"best_model\"\n",
-    "ckpt_name = \"model_30_epochs\"\n",
+    "ckpt_name = \"model_60_epochs\"\n",
     "\n",
     "model = load_model(logs_path, ckpt_name)\n",
-    "test_model_gwset(model, target=\"HOMO\")"
+    "test_model_gwset(model, target=\"GAP\")"
    ]
   },
   {
@@ -184,42 +185,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs_path = \"../visnet_logs\"\n",
-    "#logs_path = \"/Volumes/LaCie/trained_models/ViSNet/prehomo10M216502532\"\n",
+    "#logs_path = \"../visnet_logs\"\n",
+    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/pretraining_finetuning_alignment/homogap5M128502532_transfer_converged/visnet_logs\"\n",
     "#ckpt_name = \"best_model\"\n",
-    "ckpt_name = \"model_30_epochs\"\n",
+    "ckpt_name = \"model_60_epochs\"\n",
     "\n",
     "model = load_model(logs_path, ckpt_name)\n",
-    "test_model(model, test_set=\"PC9\", folder=\"E_qp\", target=\"homo\")"
+    "test_model(model, test_set=\"PC9\", folder=\"E_qp\", target=\"gap\")\n",
+    "#test_model_delta(model, test_set=\"PC9\", target=\"homo\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OE62"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logs_path = \"../visnet_logs\"\n",
-    "#logs_path = \"/Volumes/LaCie/trained_models/ViSNet/prehomo10M216502532\"\n",
-    "#ckpt_name = \"best_model\"\n",
-    "ckpt_name = \"model_30_epochs\"\n",
-    "\n",
-    "model = load_model(logs_path, ckpt_name)\n",
-    "test_model(model, test_set=\"OE6218\", folder=\"E_qp\", target=\"homo\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Elem"
+    "# OE62L"
    ]
   },
   {
@@ -229,13 +209,35 @@
    "outputs": [],
    "source": [
     "#logs_path = \"../visnet_logs\"\n",
-    "#logs_path = \"/Volumes/LaCie/trained_models/ViSNet/lumo5M128502532_transfer_converged\"\n",
-    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/lumo0M128502532\"\n",
+    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/pretraining_finetuning_alignment/homogap5M128502532_transfer_converged/visnet_logs\"\n",
     "#ckpt_name = \"best_model\"\n",
-    "ckpt_name = \"model_40_epochs\"\n",
+    "ckpt_name = \"model_60_epochs\"\n",
     "\n",
     "model = load_model(logs_path, ckpt_name)\n",
-    "test_model(model, test_set=\"OE62H1\", folder=\"E_qp\", target=\"lumo\")"
+    "test_model(model, test_set=\"OE62L\", folder=\"E_qp\", target=\"gap\")\n",
+    "#test_model_delta(model, test_set=\"OE62L\", target=\"homo\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OE62H"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#logs_path = \"../visnet_logs\"\n",
+    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/pretraining_finetuning_alignment/homolumo5M128502532_transfer_converged/visnet_logs\"\n",
+    "#ckpt_name = \"best_model\"\n",
+    "ckpt_name = \"model_25_epochs\"\n",
+    "\n",
+    "model = load_model(logs_path, ckpt_name)\n",
+    "test_model(model, test_set=\"OE62H1\", folder=\"E_qp\", target=\"lumo\", limit_mol_size=True)"
    ]
   },
   {
@@ -326,17 +328,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = \"/Users/dario/ViSNetGW/GWSet_10000_train/test\"\n",
+    "base_path = f\"/Users/dario/ViSNetGW/temp/GWSet_10000_train_seed_84/train\"\n",
     "homo = torch.load(os.path.join(base_path, \"HOMO.pt\"))\n",
-    "gap = torch.load(os.path.join(base_path, \"GAP.pt\"))\n",
-    "\n",
+    "#gap = torch.load(os.path.join(base_path, \"GAP.pt\"))\n",
     "lumo = torch.zeros_like(homo)\n",
     "n = homo.shape[0]\n",
     "for i in range(n):\n",
     "    h = homo[i, 0].item()\n",
-    "    g = gap[i, 0].item()\n",
-    "    lumo[i, 0] = g + h\n",
-    "torch.save(lumo, os.path.join(base_path, \"LUMO.pt\"))"
+    "    #g = gap[i, 0].item()\n",
+    "    #lumo[i, 0] = g + h\n",
+    "    print(homo)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for seed in [\"84\", \"126\"]:\n",
+    "    #print(seed)\n",
+    "    for num_samples in [\"10000\", \"20000\", \"40000\", \"80000\"]:\n",
+    "        #print(num_samples)\n",
+    "        for split_set in [\"train\", \"val\", \"test\"]:\n",
+    "            #print(split_set)\n",
+    "            base_path = f\"/Users/dario/ViSNetGW/temp/GWSet_{num_samples}_train_seed_{seed}/{split_set}\"\n",
+    "            homo = torch.load(os.path.join(base_path, \"HOMO.pt\"))\n",
+    "            gap = torch.load(os.path.join(base_path, \"GAP.pt\"))\n",
+    "            lumo = torch.zeros_like(homo)\n",
+    "            n = homo.shape[0]\n",
+    "            for i in range(n):\n",
+    "                h = homo[i, 0].item()\n",
+    "                g = gap[i, 0].item()\n",
+    "                lumo[i, 0] = g + h\n",
+    "            torch.save(lumo, os.path.join(base_path, \"LUMO.pt\"))"
    ]
   },
   {
